[project]
name = "j4f-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CiCi", email = "96775840+weecici@users.noreply.github.com." },
]
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "chess>=1.11.2",
    "gymnasium[toy-text]>=1.2.3",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
